--- a/package.json
+++ b/package.json
@@ -1,10 +1,10 @@
 {
-  "name": "@paulrberg/solidity-template",
+  "name": "@coinvise/solidity-template",
   "description": "Template for writing Solidity smart contracts",
   "version": "1.0.0",
   "author": {
-    "name": "Paul Razvan Berg",
-    "url": "https://paulrberg.com"
+    "name": "Sebastian T F",
+    "url": "https://github.com/sebastiantf"
   },
   "devDependencies": {
     "@codechecks/client": "^0.1.12",
