--- a/package.json
+++ b/package.json
@@ -91,7 +91,7 @@
     "prettier": "prettier --config ./.prettierrc.yaml --write \"**/*.{js,json,md,sol,ts}\"",
     "prettier:check": "prettier --check --config ./.prettierrc.yaml \"**/*.{js,json,md,sol,ts}\"",
     "prettier:silent": "yarn prettier --loglevel silent",
-    "test": "hardhat test",
+    "test": "cross-env REPORT_GAS=true hardhat test",
     "typechain": "cross-env TS_NODE_TRANSPILE_ONLY=true hardhat typechain && yarn prettier:silent"
   }
 }
