--- a/package.json
+++ b/package.json
@@ -1,10 +1,10 @@
 {
-  "name": "@paulrberg/solidity-template",
+  "name": "@coinvise/solidity-template",
   "description": "Template for writing Solidity smart contracts",
   "version": "1.0.0",
   "author": {
-    "name": "Paul Razvan Berg",
-    "url": "https://paulrberg.com"
+    "name": "Coinvise",
+    "url": "https://github.com/coinvise"
   },
   "devDependencies": {
     "@codechecks/client": "^0.1.12",
@@ -18,6 +18,7 @@
     "@nomiclabs/hardhat-ethers": "^2.0.4",
     "@nomiclabs/hardhat-etherscan": "^3.0.0",
     "@nomiclabs/hardhat-waffle": "^2.0.2",
+    "@primitivefi/hardhat-dodoc": "^0.2.1",
     "@typechain/ethers-v5": "^9.0.0",
     "@typechain/hardhat": "^4.0.0",
     "@types/chai": "^4.3.0",
@@ -28,6 +29,7 @@
     "@typescript-eslint/parser": "^5.12.0",
     "chai": "^4.3.6",
     "commitizen": "^4.2.4",
+    "copyfiles": "^2.4.1",
     "cross-env": "^7.0.3",
     "cz-conventional-changelog": "^3.3.0",
     "dotenv": "^16.0.0",
@@ -38,6 +40,7 @@
     "fs-extra": "^10.0.0",
     "hardhat": "^2.8.4",
     "hardhat-gas-reporter": "^1.0.8",
+    "hardhat-packager": "^1.3.0",
     "husky": "^7.0.4",
     "lint-staged": "^12.3.4",
     "lodash": "^4.17.21",
@@ -47,6 +50,7 @@
     "prettier-plugin-solidity": "^1.0.0-dev.21",
     "shelljs": "^0.8.5",
     "shx": "^0.3.4",
+    "solc": "^0.8.12",
     "solhint": "^3.3.7",
     "solhint-plugin-prettier": "^0.0.5",
     "solidity-coverage": "^0.7.20",
@@ -56,7 +60,9 @@
     "typescript": "^4.5.5"
   },
   "files": [
-    "/contracts"
+    "/artifacts",
+    "/contracts",
+    "/dist"
   ],
   "keywords": [
     "blockchain",
@@ -66,23 +72,27 @@
     "solidity"
   ],
   "publishConfig": {
-    "access": "public"
+    "registry": "https://npm.pkg.github.com/"
   },
   "scripts": {
-    "clean": "shx rm -rf ./artifacts ./cache ./coverage ./src/types ./coverage.json",
+    "build:types": "yarn prepare:types && tsc --project ./tsconfig.prod.json && copyfiles --up 1 \"./src/**/*.d.ts\" ./dist",
+    "clean": "shx rm -rf ./artifacts ./cache ./coverage ./src/types ./dist ./coverage.json",
     "commit": "git-cz",
     "compile": "cross-env TS_NODE_TRANSPILE_ONLY=true hardhat compile",
     "coverage": "yarn typechain && hardhat coverage --solcoverjs ./.solcover.js --temp artifacts --testfiles \"test/**/*.ts\" && yarn typechain",
     "deploy": "hardhat deploy:Greeter",
+    "docs": "hardhat dodoc && prettier --config ./.prettierrc.yaml --write \"docs/**\" --loglevel silent",
     "lint": "yarn lint:sol && yarn lint:ts && yarn prettier:check",
     "lint:sol": "solhint --config ./.solhint.json --max-warnings 0 \"contracts/**/*.sol\"",
     "lint:ts": "eslint --config ./.eslintrc.yaml --ignore-path ./.eslintignore --ext .js,.ts .",
     "postinstall": "husky install",
-    "postpublish": "pinst --enable",
-    "prepublishOnly": "pinst --disable",
+    "postpack": "pinst --enable",
+    "prepack": "pinst --disable && yarn build:types",
+    "prepare:types": "yarn hardhat prepare-package",
     "prettier": "prettier --config ./.prettierrc.yaml --write \"**/*.{js,json,md,sol,ts}\"",
     "prettier:check": "prettier --check --config ./.prettierrc.yaml \"**/*.{js,json,md,sol,ts}\"",
-    "test": "hardhat test",
+    "prettier:silent": "yarn prettier --loglevel silent",
+    "test": "cross-env REPORT_GAS=true hardhat test",
     "typechain": "cross-env TS_NODE_TRANSPILE_ONLY=true hardhat typechain"
   }
 }
