--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "@codechecks/client": "^0.1.12",
     "@commitlint/cli": "^16.2.1",
     "@commitlint/config-conventional": "^16.2.1",
+    "@ethereum-waffle/mock-contract": "^4.0.4",
     "@ethersproject/abi": "^5.7.0",
     "@ethersproject/abstract-signer": "^5.5.0",
     "@ethersproject/bignumber": "^5.5.0",
