--- a/package.json
+++ b/package.json
@@ -8,56 +8,58 @@
   },
   "devDependencies": {
     "@codechecks/client": "^0.1.12",
-    "@commitlint/cli": "^16.2.1",
-    "@commitlint/config-conventional": "^16.2.1",
-    "@ethersproject/abi": "^5.5.0",
-    "@ethersproject/abstract-signer": "^5.5.0",
-    "@ethersproject/bignumber": "^5.5.0",
-    "@ethersproject/bytes": "^5.5.0",
-    "@ethersproject/providers": "^5.5.3",
-    "@nomiclabs/hardhat-ethers": "^2.0.4",
-    "@nomiclabs/hardhat-etherscan": "^3.0.0",
-    "@nomiclabs/hardhat-waffle": "^2.0.2",
-    "@primitivefi/hardhat-dodoc": "^0.2.1",
-    "@typechain/ethers-v5": "^9.0.0",
-    "@typechain/hardhat": "^4.0.0",
-    "@types/chai": "^4.3.0",
-    "@types/fs-extra": "^9.0.13",
-    "@types/mocha": "^9.1.0",
-    "@types/node": "^17.0.18",
-    "@typescript-eslint/eslint-plugin": "^5.12.0",
-    "@typescript-eslint/parser": "^5.12.0",
-    "chai": "^4.3.6",
-    "commitizen": "^4.2.4",
+    "@commitlint/cli": "^17.6.1",
+    "@commitlint/config-conventional": "^17.6.1",
+    "@ethereum-waffle/mock-contract": "^4.0.4",
+    "@ethersproject/abi": "^5.7.0",
+    "@ethersproject/abstract-signer": "^5.7.0",
+    "@ethersproject/bignumber": "^5.7.0",
+    "@ethersproject/bytes": "^5.7.0",
+    "@ethersproject/providers": "^5.7.2",
+    "@nomicfoundation/hardhat-chai-matchers": "^1.0.6",
+    "@nomicfoundation/hardhat-network-helpers": "^1.0.8",
+    "@nomicfoundation/hardhat-toolbox": "^2.0.2",
+    "@nomiclabs/hardhat-ethers": "^2.2.3",
+    "@nomiclabs/hardhat-etherscan": "^3.1.7",
+    "@primitivefi/hardhat-dodoc": "^0.2.3",
+    "@typechain/ethers-v5": "^10.2.0",
+    "@typechain/hardhat": "^6.1.5",
+    "@types/chai": "^4.3.4",
+    "@types/fs-extra": "^11.0.1",
+    "@types/mocha": "^10.0.1",
+    "@types/node": "^18.15.11",
+    "@typescript-eslint/eslint-plugin": "^5.58.0",
+    "@typescript-eslint/parser": "^5.58.0",
+    "chai": "^4.3.7",
+    "commitizen": "^4.3.0",
     "copyfiles": "^2.4.1",
     "cross-env": "^7.0.3",
     "cz-conventional-changelog": "^3.3.0",
-    "dotenv": "^16.0.0",
-    "eslint": "^8.9.0",
-    "eslint-config-prettier": "^8.3.0",
-    "ethereum-waffle": "^3.4.0",
-    "ethers": "^5.5.4",
-    "fs-extra": "^10.0.0",
-    "hardhat": "^2.8.4",
-    "hardhat-gas-reporter": "^1.0.8",
-    "hardhat-packager": "^1.3.0",
-    "husky": "^7.0.4",
-    "lint-staged": "^12.3.4",
+    "dotenv": "^16.0.3",
+    "eslint": "^8.38.0",
+    "eslint-config-prettier": "^8.8.0",
+    "ethers": "^5.7.2",
+    "fs-extra": "^11.1.1",
+    "hardhat": "^2.13.1",
+    "hardhat-gas-reporter": "^1.0.9",
+    "hardhat-packager": "^1.4.2",
+    "husky": "^8.0.3",
+    "lint-staged": "^13.2.1",
     "lodash": "^4.17.21",
-    "mocha": "^9.2.0",
-    "pinst": "^2.1.6",
-    "prettier": "^2.5.1",
-    "prettier-plugin-solidity": "^1.0.0-dev.21",
+    "mocha": "^10.2.0",
+    "pinst": "^3.0.0",
+    "prettier": "^2.8.7",
+    "prettier-plugin-solidity": "^1.1.3",
     "shelljs": "^0.8.5",
     "shx": "^0.3.4",
-    "solc": "^0.8.12",
-    "solhint": "^3.3.7",
+    "solc": "^0.8.19",
+    "solhint": "^3.4.1",
     "solhint-plugin-prettier": "^0.0.5",
-    "solidity-coverage": "^0.7.20",
+    "solidity-coverage": "^0.8.2",
     "ts-generator": "^0.1.1",
-    "ts-node": "^10.5.0",
-    "typechain": "^7.0.0",
-    "typescript": "^4.5.5"
+    "ts-node": "^10.9.1",
+    "typechain": "^8.1.1",
+    "typescript": "^5.0.4"
   },
   "files": [
     "/artifacts",
